# HACKATHON-2-PHASE-2

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  deploy-hf.sh  main.py  overview.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
api/: index.py
backend/: .renderignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
backend/api/: index.py
backend/src/backend/: config.py  db.py  main.py
backend/src/backend/routes/: chat.py  oauth.py
backend/src/backend/services/: chat.py
backend/src/backend/tests/: __init__.py
backup-20260207-034135/: BACKUP_SUMMARY.md
backup-20260207-034135/frontend/app/: layout.tsx
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/calendar/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/reports/: page.tsx
frontend/components/: AuthButton.tsx  AuthProvider.tsx  ChatPanel.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
specs/002-full-stack-web/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-ai-chatbot/: plan.md  spec.md
specs/phase-1-console-todo/: plan.md  spec.md  tasks.md
src/: main.py
src/backend/: auth.py  config.py  db.py  main.py  mcp_server.py  models.py
src/cli/: __init__.py  commands.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  todo_service.py
tests/: __init__.py
(+41 files in other folders)
